--- a/src/main/webapp/WEB-INF/templates/oppfin/_topicHit.jspx
+++ b/src/main/webapp/WEB-INF/templates/oppfin/_topicHit.jspx
@@ -1,44 +1,76 @@
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page"
- xmlns:sbx="urn:jsptagdir:/WEB-INF/tags/sbx"
- xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
- xmlns:c="http://java.sun.com/jsp/jstl/core" version="2.0">
+          xmlns:sbx="urn:jsptagdir:/WEB-INF/tags/sbx"
+          xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+          xmlns:spring="http://www.springframework.org/tags"
+          xmlns:sec="http://www.springframework.org/security/tags"
+          xmlns:c="http://java.sun.com/jsp/jstl/core" version="2.0">
 
- <div class="result">
-  <h4 class="result-title">
-   <sbx:title hit="${hit}" />
-  </h4>
-  <p>
-   <sbx:snippet hit="${hit}" field="topicDescriptionRaw" />
-  </p>
+    <div class="result">
+        <h4 class="result-title">
+            <c:set var="marked" value="false"/>
+            <c:forEach var="item" items="${favorites}">
+                <c:if test="${item eq hit.getId()}">
+                    <c:set var="marked" value="true"/>  
+                </c:if>
+            </c:forEach>
 
-  <c:if test="${not empty hit.fieldValues['topicFlags']}">
-   <p>
-    <strong>Flag(s): </strong>
-    <sbx:out value="${hit.fieldValues['topicFlags']}" />
-   </p>
-  </c:if>
+            <c:choose>
+                <c:when test="${marked}">
+                    <a href="/${searchbox.getSlug() }/${preset.getSlug() }/${process}/un_mark_favorite?id=${hit.getId()}" style="vertical-align: bottom" title="Click to unmark favourite">
+                        <spring:url value="/assets/images/star_on.png" var="images" />
+                        <img src='${images}' alt="star" height="16" align="left"/>
+                    </a>
+                </c:when>    
+                <c:otherwise>
+                    <sec:authorize access="isAnonymous()">
+                        <a href="#" style="vertical-align: bottom" title="Log-in to store this opportunity in your favorites">
+                            <spring:url value="/assets/images/star_off.png" var="images" />
+                            <img src='${images}' alt="star" height="16" align="left"/>
+                        </a>
+                    </sec:authorize>
+                    <sec:authorize access="isAuthenticated()">
+                        <a href="/${searchbox.getSlug() }/${preset.getSlug() }/${process}/mark_favorite?id=${hit.getId()}&amp;title=${hit.getTitle()}&amp;field=${hit.idFieldName}" style="vertical-align: bottom" title="Click to store in your favorites">
+                            <spring:url value="/assets/images/star_off.png" var="images" />
+                            <img src='${images}' alt="star" height="16" align="left"/>
+                        </a>
+                    </sec:authorize>
+                </c:otherwise>
+            </c:choose>
+            <span style="display:inline-block; width: 10px;">&#160;</span>
+            <sbx:title hit="${hit}" />
+        </h4>
+        <p>
+            <sbx:snippet hit="${hit}" field="topicDescriptionRaw" />
+        </p>
 
-  <sbx:tagAttribute limit="1" label="Source"
-   values="${hit.fieldValues['docSource']}"
-   cssClass="${hit.fieldValues['docSource']}" />
+        <c:if test="${not empty hit.fieldValues['topicFlags']}">
+            <p>
+                <strong>Flag(s): </strong>
+                <sbx:out value="${hit.fieldValues['topicFlags']}" />
+            </p>
+        </c:if>
 
-  <sbx:tagAttribute limit="1" label="Call" filter="callIdentifier"
-   values="${hit.fieldValues['callIdentifier']}" />
+        <sbx:tagAttribute limit="1" label="Source"
+                          values="${hit.fieldValues['docSource']}"
+                          cssClass="${hit.fieldValues['docSource']}" />
 
-  <sbx:tagAttribute limit="1" datePattern="dd.MM.yyyy" label="Deadline"
-   values="${hit.fieldValues['callDeadline']}" />
+        <sbx:tagAttribute limit="1" label="Call" filter="callIdentifier"
+                          values="${hit.fieldValues['callIdentifier']}" />
 
-  <c:if test="${not empty hit.fieldValues['callTotalBudget']}">
-    <c:set var="callBudget">
-      <c:set var="balance">
-        <sbx:out value="${hit.fieldValues['callTotalBudget']}"/>
-      </c:set>
-      <fmt:formatNumber maxFractionDigits="2" type="number"
-      value="${balance/1000000}"/> M. €
-    </c:set>  
-  </c:if>
-  <sbx:tagAttribute values="${callBudget}" 
-    limit="1" label="Call Budget"/>
- </div>
+        <sbx:tagAttribute limit="1" datePattern="dd.MM.yyyy" label="Deadline"
+                          values="${hit.fieldValues['callDeadline']}" />
+
+        <c:if test="${not empty hit.fieldValues['callTotalBudget']}">
+            <c:set var="callBudget">
+                <c:set var="balance">
+                    <sbx:out value="${hit.fieldValues['callTotalBudget']}"/>
+                </c:set>
+                <fmt:formatNumber maxFractionDigits="2" type="number"
+                                  value="${balance/1000000}"/> M. €
+            </c:set>  
+        </c:if>
+        <sbx:tagAttribute values="${callBudget}" 
+                          limit="1" label="Call Budget"/>
+    </div>
 
 </jsp:root>
