--- a/src/main/webapp/WEB-INF/views/common/_head_menu.jspx
+++ b/src/main/webapp/WEB-INF/views/common/_head_menu.jspx
@@ -1,46 +1,75 @@
 <jsp:root xmlns:c="http://java.sun.com/jsp/jstl/core"
- xmlns:fn="http://java.sun.com/jsp/jstl/functions"
- xmlns:spring="http://www.springframework.org/tags"
- xmlns:form="http://www.springframework.org/tags/form"
- xmlns:jsp="http://java.sun.com/JSP/Page"
- xmlns:sec="http://www.springframework.org/security/tags" version="2.0">
- <jsp:output omit-xml-declaration="yes" />
+          xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+          xmlns:spring="http://www.springframework.org/tags"
+          xmlns:form="http://www.springframework.org/tags/form"
+          xmlns:jsp="http://java.sun.com/JSP/Page"
+          xmlns:sec="http://www.springframework.org/security/tags" version="2.0">
+    <jsp:output omit-xml-declaration="yes" />
+    <div style="float: right">
+        <div style="display:inline-block; vertical-align:bottom; line-height: 40px">
+            <sec:authorize access="isAnonymous()">
+                <a href="#" style="padding-bottom: 10px">
+                    <spring:url value="/assets/images/star_off.png" var="images" />
+                    <img src='${images}' alt="star" title="Log-in to view your favorite opportunities"/>
+                </a>
+            </sec:authorize>
+            <sec:authorize access="isAuthenticated()">
 
- <ul class="nav navbar-nav navbar-right">
-  <li class="dropdown"><a href="#" class="dropdown-toggle"
-   data-toggle="dropdown">
-    <sec:authorize access="isAuthenticated()">
-         ${user.getEmail() }
-         <b class="caret"> <!-- Caret --></b>
-   </sec:authorize>
-         
-    <sec:authorize access="isAnonymous()">
-        
-     <li><a href="/index">Login</a></li>
-     
-    </sec:authorize>
-   </a>
-      
-   <ul class="dropdown-menu">
-    <sec:authorize access="isAuthenticated()">
-     <spring:url value="/logout" var="logoutUrl" />
-     <li><a href="${logoutUrl }">Logout</a></li>
-     <li class="divider">
-      <!-- divider -->
-     </li>
-    </sec:authorize>
+                <a href="/favorite/list_favorite?preset=${(preset.getSlug()==null)?'all':preset.getSlug()}&amp;searchbox=oppfin" style="padding-bottom: 10px">
 
-    <spring:url var="home" value="/${searchbox.getSlug() }/" />
-    <spring:url var="admin" value="/admin/${searchbox.getSlug() }" />
-    <spring:url var="system" value="/system" />
-    <li><a href="${home }">Home</a></li>
-    <sec:authorize access="hasRole('ROLE_ADMIN')">
-    <li><a href="${admin }">Admin</a></li>
-     </sec:authorize>
-         <sec:authorize access="hasRole('ROLE_SYSTEM')">
-    <li><a href="${system }">System</a></li>
-     </sec:authorize>
-   </ul></li>
- </ul>
+                    <c:choose>
+                        <c:when test="${empty favorites}">
+                            <spring:url value="/assets/images/star_off.png" var="images" />
+                        </c:when>
+                        <c:otherwise>
+                            <spring:url value="/assets/images/star_on.png" var="images" />
+                        </c:otherwise>
+                    </c:choose>
+                    <img src='${images}' alt="star" title="List of opportunities"/>
+                </a>
+            </sec:authorize>
+        </div>
+        <div style="display:inline-block">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"
+                       data-toggle="dropdown">
+                        <sec:authorize access="isAuthenticated()">
 
+                            ${user.getEmail() }
+                            <b class="caret"> <!-- Caret --></b>
+                        </sec:authorize>
+
+                        <sec:authorize access="isAnonymous()">
+
+                            <a href="/index">Login</a>
+
+                        </sec:authorize>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <sec:authorize access="isAuthenticated()">
+                            <spring:url value="/logout" var="logoutUrl" />
+                            <li><a href="${logoutUrl }">Logout</a></li>
+                            <li class="divider">
+                                <!-- divider -->
+                            </li>
+                        </sec:authorize>
+
+                        <spring:url var="home" value="/oppfin/" />
+                        <spring:url var="admin" value="/admin/oppfin" />
+                        <spring:url var="system" value="/system" />
+                        <li><a href="${home }">Home</a></li>
+                            <sec:authorize access="hasRole('ROLE_ADMIN')">
+                            <li><a href="${admin }">Admin</a></li>
+                            </sec:authorize>
+                            <sec:authorize access="hasRole('ROLE_SYSTEM')">
+                            <li><a href="${system }">System</a></li>
+                            </sec:authorize>
+                            <sec:authorize access="hasRole('ROLE_ADMIN')">
+                            <li><a href="/favorite/admin?sort=asc">Favorite(admin)</a></li>
+                            </sec:authorize>
+                    </ul></li>
+            </ul>
+        </div>
+    </div>
 </jsp:root>
