--- a/src/main/webapp/WEB-INF/views/favorite/list_favorite.jspx
+++ b/src/main/webapp/WEB-INF/views/favorite/list_favorite.jspx
@@ -1,99 +1,114 @@
 <jsp:root version="2.0" xmlns:jsp="http://java.sun.com/JSP/Page"
- xmlns:c="http://java.sun.com/jsp/jstl/core"
- xmlns:spring="http://www.springframework.org/tags"
- xmlns:form="http://www.springframework.org/tags/form"
- xmlns:sbx="urn:jsptagdir:/WEB-INF/tags/sbx">
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:spring="http://www.springframework.org/tags"
+          xmlns:form="http://www.springframework.org/tags/form"
+          xmlns:sbx="urn:jsptagdir:/WEB-INF/tags/sbx">
 
- <jsp:output omit-xml-declaration="yes" />
- <jsp:output doctype-root-element="HTML"
-  doctype-system="about:legacy-compat" />
+    <jsp:output omit-xml-declaration="yes" />
+    <jsp:output doctype-root-element="HTML"
+                doctype-system="about:legacy-compat" />
 
- <jsp:directive.page contentType="text/html;charset=UTF-8" />
- <jsp:directive.page pageEncoding="UTF-8" />
+    <jsp:directive.page contentType="text/html;charset=UTF-8" />
+    <jsp:directive.page pageEncoding="UTF-8" />
 
- <html>
- <head>
- <jsp:include page="/WEB-INF/views/common/_head.jspx" />
- </head>
+    <html>
+        <head>
+            <jsp:include page="/WEB-INF/views/common/_head.jspx" />
+        </head>
 
-<body>
- <div id="wrap">
+        <body>
+            <div id="wrap">
 
-  <jsp:include page="/WEB-INF/views/common/_navbar.jspx" />
+                <header class="navbar navbar-fixed-top bs-docs-nav navbar-inverse"
+                        id="navbar-top" role="banner">
 
-  <div id="main-content" role="main">
+                    <div class="container-fluid" id="navbar-top-container">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button class="navbar-toggle" type="button" data-toggle="collapse"
+                                    data-target=".bs-navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span> <span
+                                    class="icon-bar"> <!-- Empty --></span> <span class="icon-bar">
+                                    <!-- Empty -->
+                                </span> <span class="icon-bar"> <!-- Empty --></span>
+                            </button>
+                        </div>
+                        <nav class="collapse navbar-collapse bs-navbar-collapse left"
+                             role="navigation">
+                            <ul class="nav navbar-nav" id="preset-bar">
+                                <c:if test="${'funding'.equals(preset.slug)}">
+                                    <c:set var="cssFunding" value="active"/>
+                                </c:if>
+                                <c:if test="${'cooperations'.equals(preset.slug)}">
+                                    <c:set var="cssCoop" value="active"/>
+                                </c:if>
+                                <c:if test="${'funded'.equals(preset.slug)}">
+                                    <c:set var="cssFunded" value="active"/>
+                                </c:if>
+                                <c:if test="${'all'.equals(preset.slug)}">
+                                    <c:set var="cssAll" value="active"/>
+                                </c:if>
+                                <li class="${cssFunding}"><a href="/favorite/list_favorite?preset=funding&amp;searchbox=oppfin">Project Funding</a></li>
+                                <li class="${cssCoop}"><a href="/favorite/list_favorite?preset=cooperations&amp;searchbox=oppfin">Cooperations</a></li>
+                                <li class="${cssFunded}"><a href="/favorite/list_favorite?preset=funded&amp;searchbox=oppfin">Funded Projects</a></li>
+                                <li class="${cssAll}"><a href="/favorite/list_favorite?preset=all&amp;searchbox=oppfin">Search All</a></li>
+                            </ul>
+                            <jsp:include page="/WEB-INF/views/common/_head_menu.jspx"/>
 
-   <div class="row" id="main-search-content">
-    <form id="searchForm">
-     <c:if test="${not empty param.debug}">
-      <input type="hidden" name="debug" value="${param.debug }" />
-     </c:if>
-     
-     <jsp:include page="/WEB-INF/views/common/_head_search_bar.jspx"/>
+                        </nav>
+                    </div>
+                </header>
+                <div id="main-content" role="main">
 
-     <div class="row" id="first-row">
-      <div class="row" id="search-status-bar">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Your have marked ${favorites.size()} opportunity
+                            <div style="float:right;">
+                                <form:form action="favorite/list_favorite?preset=funding&amp;searchbox=oppfin" method="get" >
+                                     <button class="btn btn-xs btn-default">
+                                     Back to search
+                                    </button>
+                                </form:form>
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <table class="table">
+<!--                                <thead>
+                                    <tr>
+                                        <th>Title</th>
+                                    </tr>
+                                </thead>-->
+                                <tbody>
 
-       <!-- Found x results in x time -->
-       <div class="col-md-3 col-sm-5 col-xs-7 col-left">
-        <sbx:doElement type="STAT" />
+                                    <c:forEach var="fav" items="${favorites}">
+                                        <tr>
+                                            <td>
+                                                <div class="result">
+                                                    <h4 class="result-title">
+                                                        <c:choose>
+                                                            <c:when test="${not empty fav.getFavoriteId()}">
+                                                                <spring:url var="hitUrl"
+                                                                            value="/oppfin/${preset.getSlug()}/view/?ff=${fav.getIdField()}[${fav.getFavoriteId()}]" />
+                                                                <a href="/${searchbox.getSlug() }/${preset.getSlug() }/search/un_mark_favorite?id=${fav.getFavoriteId()}" style="vertical-align: bottom" title="Click to unmark favourite">
+                                                                    <spring:url value="/assets/images/star_on.png" var="images" />
+                                                                    <img src='${images}' alt="star" height="16" align="left"/>
+                                                                </a>
+                                                                <span style="display:inline-block; width: 10px;">&#160;</span>
+                                                                <a href="${hitUrl}">${fav.getTitle()}</a>
+                                                            </c:when>
+                                                        </c:choose>
+                                                    </h4>
 
-       </div>
-       <!-- Sort button -->
-       <div
-        class="col-md-2 col-md-push-5 col-sm-2 col-sm-push-5 col-xs-5 sort-col">
-        <sbx:doElement type="SORT" />
-
-       </div>
-
-       <!-- Tags -->
-       <div class="clearfix visible-xs" style="margin-bottom: 10px">
-        <!-- clear -->
-       </div>
-       <div class="col-md-5 col-md-pull-2 col-sm-5 col-sm-pull-2">
-        <!-- Tags 
-                <span class="label label-default">Default</span> <span
-                  class="label label-primary">Primary</span> <span
-                  class="label label-success">Success</span> <span
-                  class="label label-success">Success</span>
-              -->
-       </div>
-      </div>
-     </div>
-
-     <div class="row">
-      <div class="col-md-3 col-sm-5 col-left" id="main-col-left">
-       <sbx:doElement type="FACET" />
-
-      </div>
-
-      <div style="margin-bottom: 10px" class="clearfix visible-xs">
-       <!-- clear -->
-      </div>
-
-
-      <div class="col-md-7 col-sm-7" id="main-col-center">
-       <div style="clear: all">
-        <!-- clear all -->
-       </div>
-       <sbx:doElement type="VIEW" cssClass="result-list" />
-
-       <c:if test="${not empty param.debug}">
-        <sbx:doElement type="DEBUG" />
-        ${collector }
-       </c:if>
-
-      </div>
-
-      <div class="col-md-2" id="main-col-right">
-       <!-- right col -->
-      </div>
-     </div>
-    </form>
-   </div>
-  </div>
-  <jsp:include page="/WEB-INF/views/common/_footer.jspx" />
- </div>
-</body>
- </html>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </c:forEach>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <jsp:include page="/WEB-INF/views/common/_footer.jspx" />
+            </div>
+        </body>
+    </html>
 </jsp:root>
